--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "expo": "~53.0.13",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.1",
     "expo-status-bar": "~2.2.3",
+    "path": "^0.12.7",
     "react": "19.0.0",
     "react-native": "0.79.4",
-    "expo-router": "~5.1.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.5",
-    "expo-constants": "~17.1.6"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
