--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "~4.11.1",
     "expo-video": "~2.2.2",
     "expo-file-system": "~18.1.10",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-camera": "~16.1.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
