--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "expo-video": "~2.2.2",
     "expo-file-system": "~18.1.10",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-camera": "~16.1.10"
+    "expo-camera": "~16.1.10",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
